@@ -3154,6 +3154,10 @@ DT <- data.table(a = c(1:5))
 s <- quote(a)
 test(1108, DT[, sum(eval(s))], DT[, sum(a)])
 
+# test that boolean expression does not trigger a not-join
+DT <- data.table(a = 1:3, b = c(TRUE,FALSE,NA))
+test(1109, DT[b != TRUE], DT[!(b == TRUE)])
+
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
 
